(update) add line-spacing to About paragraphs (fix) grammatical error in About Me (update) bg color in Projects

--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,7 @@ a {
 }
 /* Intro */
 
-#intro {
+.intro {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/desklayout.jpg");
   /* -webkit-background-size: cover; */
   -moz-background-size: cover;
@@ -64,7 +64,7 @@ a {
   font: sans-serif;
 }
 
-#introHeader {
+.introHeader {
   display:table;
   width: 100%;
   height: 100%;
@@ -159,7 +159,7 @@ a {
 /* About */
 
 
-#aboutme {
+.aboutme {
   box-sizing: border-box;
   padding: 2%;
   width: 90%;
@@ -168,7 +168,7 @@ a {
   margin-top: 5%;
 }
 
-#profile {
+.profile {
   width: 150px;
   height: 150px;
   border-radius: 100%;
@@ -192,35 +192,38 @@ a {
 .aboutParagraph {
   text-align: justify;
   text-justify: inter-word;
+  line-height: 1.75;
+  padding-bottom: .5em;
 }
 
 /*Project */
 
-#project {
-  background-color: #353439;
-  color: #fff;
+.project {
+  background-color: #E0EBEB;
+  color: #333;
   text-align: center;
   width: 100%;
   height: 100%;
-  padding-bottom: 3em;
+  padding: 4em 0;
 }
 
 .projectTitle {
   font-size: 2em;
   font-weight: bolder;
-  margin-top: 1em;
-  padding-top: 1.5em;
+  padding: 0 0 1em 0;
 }
 
-#projectmain {
-  width:90%;
+.projectmain {
+  width:100%;
   margin: 0 auto;
 }
 
 .projectSection {
+  box-sizing: border-box;
   width: 100%;
   font-size: 1.5em;
-  margin: 2em auto;
+  margin: 0 auto;
+  padding: 1em 5%;
 }
 
 .projectName {
@@ -230,14 +233,13 @@ a {
 }
 
 .projectIcon {
-  width: 20%
   display: inline-block;
   text-align: right;
 }
 
 /* Contact */
 
-#contact {
+.contact {
   background-color: #26262a;
   color: #fff;
   font-size: 2em;
@@ -258,23 +260,23 @@ a {
 /* Extra Small Devices, Phones */ 
 @media (min-width : 480px) {
   .introBox {
-    width: 80%;
-    padding: 5%;
+    padding: 3%;
   }
 
-  #aboutme, #projectmain {
-    width: 80%;
-  }
 }
 
 /* Small Devices, Tablets */
 @media (min-width : 768px) {
   .introBox {
-    width: 70%;
+    width: 80%;
   }
 
-  #aboutme, #projectmain {
-    width: 70%;
+  .aboutme{
+    width: 80%;
+  }
+
+  .projectSection {
+    padding: 1em 10%;
   }
 }
 
@@ -285,8 +287,12 @@ a {
     padding: 2%;
   }
 
-  #aboutme, #projectmain {
+  .aboutme{
     width: 60%;
+  }
+
+  .projectSection {
+    padding: 1em 20%;
   }
 }
 
